--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     background-color: #ffe5e5;
-    background-image: url(/heart.png);
+    background-image: url(heart.png);
     background-size: cover;
   }
   
